<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".SolicitarClaseActivity" >

        <TextView
            android:id="@+id/txt_titulo_solicitar_alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_solicitar_alumno"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_titulo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_desc_solicitar_alumno"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_descripcion_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:text="@string/txt_desc_solicitar_alumno" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:hint="@string/txt_nombre_ingresar_alumno"
            android:autofillHints="@string/txt_nombre_ingresar_alumno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nombre_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusableInTouchMode="true"
                android:focusable="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_telefono_ingresar_alumno"
            android:autofillHints="@string/txt_telefono_ingresar_alumno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_telefono_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_direccion_ingresar_alumno"
            android:autofillHints="@string/txt_direccion_ingresar_alumno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_direccion_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email_ingresar_alumno"
            android:autofillHints="@string/txt_email_ingresar_alumno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="MissingConstraints"/>

        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancelar_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_cancelar_ingresar_alumno"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/icon_back_foreground"/>

            <Button
                android:id="@+id/btn_guardar_ingresar_alumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_guardar_ingresar_alumno"
                android:drawableLeft="@drawable/icon_save_foreground"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>