<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        tools:context=".RegistrarseActivity" >

        <TextView
            android:id="@+id/txt_titulo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_registration"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_descripcion_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_completa_registration"
            android:textAlignment="gravity"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre_registration"
            android:autofillHints="@string/txt_nombre_registration"
            android:focusableInTouchMode="true"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nombre_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusableInTouchMode="true"
                android:focusable="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email_registration"
            android:autofillHints="@string/txt_email_registration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="MissingConstraints"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/txt_password_registration"
            android:autofillHints="@string/txt_password_registration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/txt_repet_password_registration"
            android:autofillHints="@string/txt_repet_password_registration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_repet_pass_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/txt_terminos_condiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="12sp"
            android:text="@string/txt_terminos_condiciones"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:gravity="bottom"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"/>

        <CheckBox android:id="@+id/checkbox_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="He leído y acepto los términos y condiciones de la política de protección de datos." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_cancelar_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/btn_cancelar_registration"
                    android:layout_marginRight="5dp"
                    android:drawableLeft="@drawable/icon_back_foreground"/>

                <Button
                    android:id="@+id/btn_registrarse_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/btn_registrarse_registration"
                    android:drawableLeft="@drawable/icon_save_foreground"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>