<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/txt_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_login"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:hint="@string/txt_email_login"
            android:autofillHints="@string/txt_email_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="MissingConstraints"
                android:focusableInTouchMode="true"
                android:focusable="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            android:hint="@string/txt_password_login"
            android:autofillHints="@string/txt_password_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="MissingConstraints"/>

        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_registrarse_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/btn_registrarse_login"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/icon_add_person_foreground"/>

        <Button
            android:id="@+id/btn_iniciar_sesion_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/btn_login"
            android:drawableLeft="@drawable/icon_login_foreground"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>
